Fixed footer content alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ body * {
 .rights {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 10px 45px;
   color: #282b31;
   background-color: #fff;
